Modified .gitignore: ignore useless files for each project

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-**/td1/target/
-**/td1/project/target/
-**/td1/project/project/
-**/td1/.idea/
-**/td1/.bsp/
+**/td*/target/
+**/td*/project/target/
+**/td*/project/project/
+**/td*/.idea/
+**/td*/.bsp/
